# mgairfw

./: .gitignore  CMakeLists.txt  README.md  flash.sh  full_build.sh  generate_keys_and_nvs.py  prj.conf  root-rsa-2048.pem
boards/arm/mgair_v3/: Kconfig.defconfig  Kconfig.mgair_v3  board.cmake  board.yml  mgair_v3-pinctrl.dtsi  mgair_v3.dts  mgair_v3.yaml  mgair_v3_defconfig  mgair_v3_partition.dtsi
keys/: root-rsa-2048.pem
src/: DeviceConfig.cpp  DeviceConfig.h  Sht45Sensor.cpp  Sht45Sensor.h  config.h  main.cpp
src/BLELN/: BLELNAuthentication.cpp  BLELNAuthentication.h  BLELNBase.cpp  BLELNBase.h  BLELNClient.cpp  BLELNClient.h  BLELNConnCtx.h  BLELNEncryptData.cpp  BLELNEncryptData.h  BLELNMessage.h  BLELNServer.cpp  BLELNServer.h  BLELNSessionEnc.cpp  BLELNSessionEnc.h  Encryption.cpp
src/Connectivity/: Connectivity.cpp  Connectivity.h  ConnectivityClient.cpp  ConnectivityClient.h  ConnectivityConfig.cpp  ConnectivityConfig.h
src/bleln/: BLELNAuthentication.cpp  BLELNAuthentication.h  BLELNBase.cpp  BLELNBase.h  BLELNCert.cpp  BLELNCert.h  BLELNClient.cpp  BLELNClient.h  BLELNConnCtx.cpp  BLELNConnCtx.h  BLELNServer.cpp  BLELNServer.h  Encryption.h
